[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel", "interactive"]
parallel = ["rayon"]
interactive = ["tui", "crossterm"]

[dependencies]
thiserror = "1.0.37"
clap = { version = "4.0.29", features = ["cargo"] }
rayon = { version = "1.6.1", optional = true }
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.25.0", optional = true }
bitflags = "1.3.2"
