[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel", "interactive"]
parallel = ["rayon"]
interactive = ["tui", "crossterm"]

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
rayon = { version = "1.6.1", optional = true }
tui = { version = "0.19.0", optional = true }
crossterm = { version = "0.25.0", optional = true }
pattern_parse = { path = "pattern_parse" }
aoc_2022 = { version = "0.1.0", path = "aoc_2022" }
common = { version = "0.1.0", path = "common" }
anyhow = "1.0.75"
thiserror = "1.0.47"
clap_derive = "4.4.2"
aoc_2021 = { version = "0.1.0", path = "aoc_2021" }
aoc_2023 = { version = "0.1.0", path = "aoc_2023" }
